--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npx hardhat run scripts/deploy.ts",
+    "deploy:goerli": "npx hardhat run scripts/deploy.ts --network goerli",
+    "create-network": "npx hardhat node",
+    "deploy:localhost": "npx hardhat run scripts/deploy.ts --network localhost"
   },
   "author": "",
   "license": "ISC",
